--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="hello">
+        <h1>Hello world!</h1>
+    </div>
+
 
     <script src="js/main.js"></script>
 </body>
