--- a/app/index.html
+++ b/app/index.html
@@ -8,29 +8,11 @@
     <title>Blaz Robar</title>
 </head>
 <body>
-  <header>
-    <div class="layout">
-      <nav>
-        <ul class="header-content">
-          <li>
-            <a href="">PSD WEBSITES</a>
-          </li>
-          <li>
-            <a href="">UI KITS</a>
-          </li>
-          <li>
-            <a href="">PREMIUM PSD FILES</a>
-          </li>
-          <li>
-            <a href="">ABOUT</a>
-          </li>
-          <li>
-            <a href="">BLOG</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+  <div class="content">
+  </div>
+  <footer class="footer">
+    <div class="layout"></div>
+  </footer>
     <script src="js/main.js"></script>
 </body>
 </html>
