--- a/app/index.html
+++ b/app/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <title>Blaz Robar</title>
 </head>
 <body>
   <header>
     <div class="layout">
       <nav>
-        <ul class="header-content">
+        <ul>
           <li>
             <a href="">PSD WEBSITES</a>
           </li>
