--- a/app/index.html
+++ b/app/index.html
@@ -9,30 +9,22 @@
     <title>Blaz Robar</title>
 </head>
 <body>
-  <header>
-    <div class="layout">
-      <nav>
-        <ul>
-          <li>
-            <a href="">PSD WEBSITES</a>
-          </li>
-          <li>
-            <a href="">UI KITS</a>
-          </li>
-          <li>
-            <a href="">PREMIUM PSD FILES</a>
-          </li>
-          <li>
-            <a href="">ABOUT</a>
-          </li>
-          <li>
-            <a href="">BLOG</a>
-          </li>
-        </ul>
-      </nav>
+  <header class="header">
+    <div class="logo">
+      <a href="/">
+        Blaz Robar
+      </a>
     </div>
+    <nav class="nav">
+      <ul class="nav-list">
+        <li><a href="#">PSD WEBSITES</a></li>
+        <li><a href="#">UI KITS</a></li>
+        <li><a href="#">PREMIUM PSD FILES</a></li>
+        <li><a href="#">ABOUT</a></li>
+        <li><a href="#">BLOG</a></li>
+      </ul>
+    </nav>
   </header>
-
     <script src="js/main.js"></script>
 </body>
 </html>
