update first view

--- a/app/index.html
+++ b/app/index.html
@@ -5,10 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Quicksand:wght@700&display=swap" rel="stylesheet">
     <title>Blaz Robar</title>
 </head>
 <body>
-
+  <section class="first-view">
+    <div class="text-banner">
+      Awesome Free PSD templates & Resources
+    </div>
+    <div class="link-br">
+      www.BlazRobar.com
+      <a href="#">></a>
+    </div>
+  </section>
 
     <script src="js/main.js"></script>
 </body>
