--- a/app/index.html
+++ b/app/index.html
@@ -5,10 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Quicksand:wght@700&display=swap" rel="stylesheet">
     <title>Blaz Robar</title>
 </head>
 <body>
-
+ <section class="link-portfolio">
+     <div class="text-link">
+        <p>I'm like the Robin Hood of PSD files.</p>
+     </div>
+     <div class="background-link">
+         <a href="#">></a>
+     </div>
+ </section>
 
     <script src="js/main.js"></script>
 </body>
