--- a/app/index.html
+++ b/app/index.html
@@ -5,10 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap" rel="stylesheet">
     <title>Blaz Robar</title>
 </head>
 <body>
-
+<section class="portfolio">
+    <ul class="list-portfolio">
+        <li>
+            <img src="./images/br-jungle.jpg" alt="">
+            <div class="br-portfolio">
+                <a href="#">></a>
+            </div>
+        </li>
+        <li>
+            <img src="./images/br-bridge.png" alt="">
+            <div class="br-portfolio">
+                <a href="#">></a>
+            </div>
+        </li>
+        <li>
+            <img src="./images/br-female.png" alt="">
+            <div class="br-portfolio">
+                <a href="#">></a>
+            </div>
+        </li>
+    </ul>
+</section>
 
     <script src="js/main.js"></script>
 </body>
