--- a/app/index.html
+++ b/app/index.html
@@ -10,21 +10,23 @@
 </head>
 <body>
   <header class="header">
-    <div class="logo">
-      <a href="/">
-        Blaz Robar
-      </a>
-    </div>
-    <nav class="nav">
-      <ul class="nav-list">
-        <li><a href="#">PSD WEBSITES</a></li>
-        <li><a href="#">UI KITS</a></li>
-        <li><a href="#">PREMIUM PSD FILES</a></li>
-        <li><a href="#">ABOUT</a></li>
-        <li><a href="#">BLOG</a></li>
-      </ul>
-    </nav>
-  </header>
+      <div class="clearfix container">
+        <div class="logo">
+            <a href="/">
+              Blaz Robar
+            </a>
+          </div>
+          <nav class="nav">
+            <ul class="clearfix nav-list">
+              <li><a href="#">PSD WEBSITES</a></li>
+              <li><a href="#">UI KITS</a></li>
+              <li><a href="#">PREMIUM PSD FILES</a></li>
+              <li><a href="#">ABOUT</a></li>
+              <li><a href="#">BLOG</a></li>
+            </ul>
+          </nav>
+      </div>
+    </header>
     <script src="js/main.js"></script>
 </body>
 </html>
