--- a/app/index.html
+++ b/app/index.html
@@ -9,14 +9,18 @@
     <title>Blaz Robar</title>
 </head>
 <body>
-  <section class="first-view">
-    <div class="text-banner">
-      Awesome Free PSD templates & Resources
-    </div>
-    <div class="link-br">
-      www.BlazRobar.com
-      <a href="#">></a>
-    </div>
+    <section class="banner">
+        <div class="container">
+            <h1>
+                Awesome Free PSD templates & Resources
+            </h1>
+            <a href="#">
+            www.BlazRobar.com
+            </a>
+            <a href="#">
+                >
+            </a>
+        </div>
   </section>
 
     <script src="js/main.js"></script>
