--- a/app/index.html
+++ b/app/index.html
@@ -11,15 +11,14 @@
 <body>
     <section class="banner">
         <div class="container">
-            <h1>
-                Awesome Free PSD templates & Resources
-            </h1>
-            <a href="#">
-            www.BlazRobar.com
-            </a>
-            <a href="#">
-                >
-            </a>
+            <div class="holder">
+                <h1>
+                    Awesome Free PSD templates & Resources
+                </h1>
+                <a href="#">
+                www.BlazRobar.com
+                </a>
+            </div>
         </div>
   </section>
 
