--- a/app/index.html
+++ b/app/index.html
@@ -10,26 +10,21 @@
 </head>
 <body>
 <section class="portfolio">
-    <ul class="list-portfolio">
+    <div class="container">
+    <ul class="list-portfolio clearfix">
         <li>
-            <img src="./images/br-jungle.jpg" alt="">
-            <div class="br-portfolio">
-                <a href="#">></a>
-            </div>
+            <a href="#">
+                <span>></span>
+            </a>
         </li>
         <li>
             <img src="./images/br-bridge.png" alt="">
-            <div class="br-portfolio">
-                <a href="#">></a>
-            </div>
         </li>
         <li>
             <img src="./images/br-female.png" alt="">
-            <div class="br-portfolio">
-                <a href="#">></a>
-            </div>
         </li>
     </ul>
+    </div>
 </section>
 
     <script src="js/main.js"></script>
