--- a/app/index.html
+++ b/app/index.html
@@ -10,11 +10,15 @@
 </head>
 <body>
  <section class="link-portfolio">
-     <div class="text-link">
-        <p>I'm like the Robin Hood of PSD files.</p>
-     </div>
-     <div class="background-link">
-         <a href="#">></a>
+     <div class="container">
+        <div class="background-link">
+            <a href="#">
+                >
+            </a>
+        </div>
+        <div class="text-link">
+            <p>I'm like the Robin Hood of PSD files.</p>
+         </div>
      </div>
  </section>
 
