br-7: new files

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,18 @@
   <div class="content">
   </div>
   <footer class="footer">
-    <div class="layout"></div>
+    <div class="layout">
+      <div class="container">
+        <ul class="social-network">
+          <li><a href="#"><img src="./images/icon-facebook.png" alt="Facebook"></a></li>
+          <li><a href="#"><img src="./images/icon-link.png" alt="Linkedin"></a></li>
+          <li><a href="#"><img src="./images/icon-twitter.png" alt="Twitter"></a></li>
+        </ul>
+        <div class="copyright">
+          <p>copyright © 2021 <span>blaz robar</span></p>
+        </div>
+      </div>
+    </div>
   </footer>
     <script src="js/main.js"></script>
 </body>
