br-4: modified section link-portfolio

--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,9 @@
             </a>
         </div>
         <div class="text-link">
-            <p>I'm like the Robin Hood of PSD files.</p>
+            <div class="holder">
+              <p>I'm like the Robin Hood of PSD files.</p>
+            </div>
          </div>
      </div>
  </section>
