br-7: footer update

--- a/app/index.html
+++ b/app/index.html
@@ -30,16 +30,26 @@
   <div class="content">
   </div>
   <footer class="footer">
-    <div class="layout">
-      <div class="container">
-        <ul class="social-network">
-          <li><a href="#"><img src="./images/icon-facebook.png" alt="Facebook"></a></li>
-          <li><a href="#"><img src="./images/icon-link.png" alt="Linkedin"></a></li>
-          <li><a href="#"><img src="./images/icon-twitter.png" alt="Twitter"></a></li>
-        </ul>
-        <div class="copyright">
-          <p>copyright © 2021 <span>blaz robar</span></p>
-        </div>
+    <div class="container">
+      <ul class="social-network">
+        <li>
+          <a href="#" target="_blank">
+            <img src="./images/icon-facebook.png" alt="Facebook">
+          </a>
+        </li>
+        <li>
+          <a href="#" target="_blank">
+            <img src="./images/icon-link.png" alt="Linkedin">
+          </a>
+        </li>
+        <li>
+          <a href="#" target="_blank">
+            <img src="./images/icon-twitter.png" alt="Twitter">
+          </a>
+        </li>
+      </ul>
+      <div class="copyright">
+        <p>Copyright &copy; 2021 <span>Blaz Robar</span></p>
       </div>
     </div>
   </footer>
