develop: modified all files

--- a/app/index.html
+++ b/app/index.html
@@ -43,11 +43,9 @@
         </section> <!-- /.banner -->
       <section class="link-portfolio">
          <div class="container">
-            <div class="background-link">
-                <a href="#">
-                    >
-                </a>
-            </div>
+            <a class="link" href="#">
+                <span>></span>
+            </a>
             <div class="text-link">
                 <div class="holder">
                   <p>I'm like the Robin Hood of PSD files.</p>
@@ -59,9 +57,9 @@
         <div class="container">
           <ul class="list-portfolio clearfix">
               <li>
-                  <a href="#">
-                      <span>></span>
-                  </a>
+                <a class="link link-dark" href="#">
+                  <span>></span>
+                </a>
               </li>
               <li>
                   <img src="./images/br-bridge.png" alt="">
