br-flex: Modified fiels on responsive

--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,16 @@
                   <li><a href="#">BLOG</a></li>
               </ul>
           </nav> <!-- /.nav -->
+          <div class="menu">
+            <a href="#">
+              <img src="./images/nav-menu.png" alt="Menu">
+            </a>
+          </div>
+          <div class="menu-close">
+            <a href="#">
+              <img src="./images/ico-close-menu.png" alt="Close Menu">
+            </a>
+          </div>
       </div>
     </header> <!-- /.header -->
     <main class="content">
@@ -106,6 +116,7 @@
       </ul>
     </div>
   </footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 
