br-flex: Modified all fiels in responsiv and flex

--- a/app/index.html
+++ b/app/index.html
@@ -26,16 +26,11 @@
                   <li><a href="#">BLOG</a></li>
               </ul>
           </nav> <!-- /.nav -->
-          <div class="menu">
-            <a href="#">
-              <img src="./images/nav-menu.png" alt="Menu">
-            </a>
-          </div>
-          <div class="menu-close">
-            <a href="#">
-              <img src="./images/ico-close-menu.png" alt="Close Menu">
-            </a>
-          </div>
+          <button type="button"
+                  class="btn btn-hamburger"
+                  title="Show\Hide Menu">
+            <i class="icon icon-hamburger"></i>
+          </button> <!-- /button -->
       </div>
     </header> <!-- /.header -->
     <main class="content">
@@ -48,21 +43,21 @@
                     <a href="#">
                         www.BlazRobar.com
                     </a>
-                </div>
+                </div> <!-- /.holder -->
             </div>
         </section> <!-- /.banner -->
       <section class="link-portfolio">
          <div class="container">
+           <div class="text-link">
+             <div class="holder">
+               <p>I'm like the Robin Hood of PSD files.</p>
+              </div> <!-- /.holder -->
+            </div>
             <a class="link" href="#">
                 <span>></span>
-            </a>
-            <div class="text-link">
-                <div class="holder">
-                  <p>I'm like the Robin Hood of PSD files.</p>
-                </div>
-            </div>
+            </a> <!-- /.link -->
          </div>
-      </section>
+      </section> <!-- /.link-portfolio -->
       <section class="portfolio">
         <div class="container">
           <ul class="list-portfolio clearfix">
@@ -77,9 +72,9 @@
               <li>
                   <img src="./images/br-female.png" alt="">
               </li>
-          </ul>
+          </ul> <!-- /.list-portfolio -->
         </div>
-      </section>
+      </section> <!-- /.portfolio -->
       <section class="text-part">
         <div class="container">
           <h3>BlazRobar.com</h3>
@@ -88,9 +83,9 @@
             <p>Phasellus imperdiet mattis nulla. Integer gravida imperdiet congue. Proin vitae pretium augue. Donec est sem, mattis et blandit ac, blandit at arcu. Donec tempus tincidunt suscipit. Suspendisse eu vulputate lacus.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vehicula ipsum non leo tristique eget facilisis lacus commodo. Curabitur vitae justo lorem, non ornare nibh. Pellentesque pretium, tellus ac ultrices faucibus, nibh mauris dapibus lorem, vitae viverra nisl elit sit amet libero. Nam eu blandit risus.</p>
             <p>Phasellus imperdiet mattis nulla. Integer gravida imperdiet congue. Proin vitae pretium augue. Donec est sem, mattis et blandit ac, blandit at arcu. Donec tempus tincidunt suscipit. Suspendisse eu vulputate lacus.</p>
-          </div>
+          </div> <!-- /.text -->
         </div>
-      </section>
+      </section> <!-- /.text-part -->
     </main>
     <footer class="footer">
     <div class="container">
@@ -113,9 +108,9 @@
             <img src="./images/icon-twitter.png" alt="Twitter">
           </a>
         </li>
-      </ul>
+      </ul> <!-- /.social-network -->
     </div>
-  </footer>
+  </footer> <!-- /.footer -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/main.js"></script>
 </body>
