br-flex: Modified all files on responsiv all size

--- a/app/index.html
+++ b/app/index.html
@@ -11,14 +11,9 @@
 </head>
 <body>
   <header class="header">
-      <div class="clearfix container">
-          <div class="logo">
-              <a href="/">
-                  Blaz Robar
-              </a>
-          </div> <!-- /.logo -->
+      <div class="container">
           <nav class="nav">
-              <ul class="clearfix nav-list">
+              <ul class="nav-list">
                   <li><a href="#">PSD WEBSITES</a></li>
                   <li><a href="#">UI KITS</a></li>
                   <li><a href="#">PREMIUM PSD FILES</a></li>
@@ -60,7 +55,7 @@
       </section> <!-- /.link-portfolio -->
       <section class="portfolio">
         <div class="container">
-          <ul class="list-portfolio clearfix">
+          <ul class="list-portfolio">
               <li>
                 <a class="link link-dark" href="#">
                   <span>></span>
